Closed Bug 343604 Opened 19 years ago Closed 19 years ago

Empty applet tag fails to load the Java plugin

Categories

(Core Graveyard :: Plug-ins, defect)

defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED
mozilla1.9alpha1

People

(Reporter: martijn.martijn, Assigned: Biesinger)

References

Details

(Keywords: regression, testcase)

Attachments

(2 files)

When using <applet></applet>, it used to load the Java plugin in Mozilla. That's not happening anymore in current trunk build. This worked in a 2005-10-08 build, but fails in a 2005-10-11 build. This seems like a regression from bug 311674.
Attached file testcase
Internet Explorer and Opera both load the Java plugin.
is this even a bug? anyway... the code is at http://lxr.mozilla.org/seamonkey/source/content/html/content/src/nsHTMLSharedObjectElement.cpp#397 (with an outdated comment), so just removing the if and always doing the else block should fix this, I think.
OS: Windows XP → All
Hardware: PC → All
I guess this is not really a bug, but perhaps a compatibility issue (although loading broken Java applets isn't that useful anyway).
Attached patch patchSplinter Review
this ought to fix it, I'll test it once I have a build
Assignee: nobody → cbiesinger
Status: NEW → ASSIGNED
Comment on attachment 228194 [details] [diff] [review] patch OK, tested and works. This patch is good even if this bug isn't really a bug, because it simplifies the code.
Attachment #228194 - Flags: superreview?(bzbarsky)
Attachment #228194 - Flags: review?(bzbarsky)
Target Milestone: --- → mozilla1.9alpha
Comment on attachment 228194 [details] [diff] [review] patch Sure. Sounds good.
Attachment #228194 - Flags: superreview?(bzbarsky)
Attachment #228194 - Flags: superreview+
Attachment #228194 - Flags: review?(bzbarsky)
Attachment #228194 - Flags: review+
Checking in content/html/content/src/nsHTMLSharedObjectElement.cpp; /cvsroot/mozilla/content/html/content/src/nsHTMLSharedObjectElement.cpp,v <-- nsHTMLSharedObjectElement.cpp new revision: 1.81; previous revision: 1.80 done
Status: ASSIGNED → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: