Bug 343604 make <applet> and <embed> handling consistent when there is no src/code attribute, aka instantiate java even for <applet/> r+sr=bz